--- a/website-naissance/package.json
+++ b/website-naissance/package.json
@@ -13,6 +13,7 @@
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0"
   },
