--- a/ms-naissance/ms-naissance/src/main/resources/application.yml
+++ b/ms-naissance/ms-naissance/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
   application:
     name:
@@ -7,3 +8,6 @@ spring:
       ddl-auto: validate
   jackson:
     default-property-inclusion: non_null
+server:
+  servlet:
+    context-path: /api
