--- a/ms-naissance/ms-naissance/src/main/resources/application.yml
+++ b/ms-naissance/ms-naissance/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring:
 server:
   servlet:
     context-path: /api
+rsa:
+  private-key: classpath:certs/private.pem
+  public-key: classpath:certs/public
+
