Authentifier un utilisateur

--- a/ms-naissance/ms-naissance/src/main/resources/application.yml
+++ b/ms-naissance/ms-naissance/src/main/resources/application.yml
@@ -12,6 +12,6 @@ server:
   servlet:
     context-path: /api
 rsa:
-  private-key: classpath:certs/private.pem
-  public-key: classpath:certs/public
+  rsa-private-key: classpath:certs/private.pem
+  rsa-public-key: classpath:certs/public
 
