deployer un front

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -9,7 +9,7 @@ env:
 jobs:
   create-folder:
     name: Create folder on server
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-ubuntu-24.04
     steps:
       - name: Execute remote SSH commands
         uses: appleboy/ssh-action@v1
@@ -22,7 +22,7 @@ jobs:
             mkdir -p ${{env.GROUP}}/${{env.PROJECT}}          
 
   build-project:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-ubuntu-24.04
     needs: create-folder
     steps:
       - name: Check out repository code
