--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
+      - name: Install dependencies
+        run: npm ci  
+
 
       - name: build project
         run: |
