deployer un front

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,7 +29,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: npm ci  
+        run: |
+         npm Install  
 
 
       - name: build project
