--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -29,8 +29,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: |
-          npm Install
+        run: npm ci
+          
 
 
       - name: build project
