--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -48,30 +48,30 @@ jobs:
           strip_components: 1
           overwrite: true
   run-project:
-  name: run project on server
-  runs-on: ubuntu-latest
-  needs: build-project
+    name: run project on server
+    runs-on: ubuntu-24.04
+    needs: build-project
   steps:
     - name: Check out repository code
       uses: actions/checkout@v4
     - name: Copy configurations file on server
       uses: appleboy/scp-action@v1
       with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SERVER_PORT }}
-          source: website-naissances.conf
-          target: /etc/nginx/conf.d/website-naissances.conf
-          overwrite: true
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
+        port: ${{ secrets.SERVER_PORT }}
+        source: website-naissances.conf
+        target: /etc/nginx/conf.d
+        overwrite: true
     - name: Execute remote SSH commands
       uses: appleboy/ssh-action@v1
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        port: ${{ secrets.PORT }}
+        key: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
+        port: ${{ secrets.SERVER_PORT }}
         script: |
           nginx -t
-          nginx restart
+          service nginx restart
  
