Installer sur nginx avec un nom de domaine

--- a/website-naissances.conf
+++ b/website-naissances.conf
@@ -1,7 +1,6 @@
 
 server {
-        listen 90 default_server;
-        listen [::]:90 default_server;
+        
 
         
 
@@ -10,7 +9,9 @@ server {
         # Add index.php to the list if you are using PHP
         index index.html index.htm index.nginx-debian.html;
 
-        server_name _;
+        server_name website.geburtsregister.com;
+        access_log /var/log/nginx/website-access.log;
+        error_log /var/log/nginx/website-error.log;
 
         location / {
                 # First attempt to serve request as file, then
