--- a/website-naissances.conf
+++ b/website-naissances.conf
@@ -9,7 +9,7 @@ server {
         # Add index.php to the list if you are using PHP
         index index.html index.htm index.nginx-debian.html;
 
-        server_name website.geburtsregister.com;
+        server_name website.geburtsregister.com www.geburtsregister.com;
         access_log /var/log/nginx/website-access.log;
         error_log /var/log/nginx/website-error.log;
 
