configuration du reverse proxy pour acceder a l'api

--- a/website-naissances.conf
+++ b/website-naissances.conf
@@ -13,6 +13,10 @@ server {
         access_log /var/log/nginx/website-access.log;
         error_log /var/log/nginx/website-error.log;
 
+        location /api {
+                proxy_pass http:/localhost:8082;
+        }
+
         location / {
                 # First attempt to serve request as file, then
                 # as directory, then fall back to displaying a 404.
