configuration du reverse proxy pour acceder a l'api

--- a/website-naissances.conf
+++ b/website-naissances.conf
@@ -14,7 +14,7 @@ server {
         error_log /var/log/nginx/website-error.log;
 
         location /api {
-                proxy_pass http:/localhost:8082;
+                proxy_pass http://localhost:8082;
         }
 
         location / {
