config du mailpit dans nginx

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -74,5 +74,6 @@ jobs:
         script: |
           nginx -t
           service nginx restart
+          certbot certonly --nginx -d website.geburtsregister.com -d  www.geburtsregister.com --force-renew
           
  
