--- a/mailpit.conf
+++ b/mailpit.conf
@@ -12,7 +12,7 @@ server {
         access_log /var/log/nginx/website-access.log;
         error_log /var/log/nginx/website-error.log;
 
-        location  {
+        location / {
                 proxy_pass http://localhost:8025;
         }
         
